infra/oidc-wif/resources/oidc-proxy.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oidc-proxy
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: http-proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/component: http-proxy
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
      volumes:
        - name: config
          configMap:
            name: oidc-proxy-config
            items:
              - key: oidc-proxy.nginx.conf
                path: nginx.conf
        - name: tmp
          emptyDir:
            medium: Memory
            sizeLimit: 2Mi
      containers:
        - name: nginx
          image: nginx:latest-slim
          securityContext:
            runAsNonRoot: true
            runAsUser: 101
            runAsGroup: 101
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: config
              subPath: nginx.conf
              readOnly: true
            - mountPath: /tmp
              name: tmp
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "32Mi"
              cpu: "100m"
          startupProbe:
            httpGet:
              path: /_health
              port: http
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /_health
              port: http
              scheme: HTTP
          livenessProbe:
            httpGet:
              path: /_health
              port: http
              scheme: HTTP
