infra/oidc-wif/resources/oidc-proxy.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oidc-proxy
spec:
  selector:
    app.kubernetes.io/component: http-proxy
  ports:
  - port: 80
    targetPort: http
