infra/oidc-wif/resources/oidc.gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: oidc
spec:
  gatewayClassName: traefik
  listeners:
  - protocol: HTTP
    port: 8000
    name: http-gw
    hostname: oidc.moya.lemon.narthollis.net
  - protocol: HTTPS
    port: 8443
    name: https-gw
    hostname: oidc.moya.lemon.narthollis.net
    tls:
      mode: Terminate
      certificateRefs:
        - group: ""
          kind: Secret
          name: oidc-moya-lemon-narthollis-net-tls
