infra/oidc-wif/resources/oidc.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oidc
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: oidc
  rules:
    - matches:
      - path:
          type: Exact
          value: /.well-known/openid-configuration
        method: GET
      - path:
          value: /openid/v1/jwks
          type: Exact
        method: GET
      backendRefs:
        - group: ""
          kind: Service
          name: oidc-proxy
          port: 80
          weight: 1
